# Bass-Bot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  bot_funcs.py  db.py  docker-compose.yaml  download_data_volume.sh  example.env  pyproject.toml
dpo_trainer/: dpo.py  models.py
dpo_trainer/tools/: __init__.py  mix.py  torch_tools.py
notebooks/: process_survey_responses.ipynb
